docs updated